--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -40,7 +40,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mssql-jdbc-12.6.1.jre11.jar}
+    ${file.reference.mssql-jdbc-12.6.1.jre11.jar}:\
+    ${libs.JCalendar.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
